src- Version 4.19/objects/Job_Rate_Plan_Charge__c.object
<CustomObject>
    <description>The tier 3 of the product catalog linked to the Order.</description>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <inlineHelpText>Shows the unique Accounting Code for the Order charge. Accounting codes are setup and maintained in the Invoice IT product catalog.</inlineHelpText>
        <label>Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Grouped_Quantity__c</fullName>
        <description>Used in Consortium Billing. Holds the total group quantity of all the order charges that are part of this group.</description>
        <inlineHelpText>Used in Consortium Billing. Holds the total group quantity of all the order charges that are part of this group.</inlineHelpText>
        <label>Billing Master - Grouped Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Master_Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order Rate Plan Charge level belonging to the Master Order</description>
        <inlineHelpText>Used in Consortium Billing. The Pricing/Discount should be recorded at this Order Rate Plan Charge level belonging to the Master Order</inlineHelpText>
        <label>Billing Master Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Billing Master Order Rate Plan Charge)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Adjusted_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will contain old charge details when Midterm Adjustment is done for Quantity</description>
        <inlineHelpText>This will contain old charge details when Midterm Adjustment is done for Quantity</inlineHelpText>
        <label>Charge Adjusted From</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Charge adjusted from)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <description>This field is used for Minimum customer spent</description>
        <inlineHelpText>Shows the unique Charge Code.</inlineHelpText>
        <label>Charge Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Date__c</fullName>
        <description>This Charge has been invoiced till this date.</description>
        <inlineHelpText>This Charge has been invoiced till this date.</inlineHelpText>
        <label>Current Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <inlineHelpText>The Quantity your customer commits to spend on a minimum.</inlineHelpText>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <inlineHelpText>Shows the Per Unit Cost of the Product/Service. Allows profitability of the Order to be calculated.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Quantity * Unit Cost</description>
        <inlineHelpText>Shows the Total Cost for all units of the Product/Service (Quantity * Unit Cost)</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrencyL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Currency code for the order charge that will match to the currency code of the Order.</inlineHelpText>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deferred_Revenue_Accounting_Code__c</fullName>
        <label>Deferred Revenue Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Discount %  that has been applied to the order charge.</inlineHelpText>
        <label>Discount %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <description>This determines the type of discount(i.e discount applied by Value or Percentage).</description>
        <inlineHelpText>This determines the type of discount(i.e discount applied by Value or Percentage).</inlineHelpText>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Discount Value that has been applied to the order charge.</inlineHelpText>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Dispatch</description>
        <label>Dispatch Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grouping</label>
        <referenceTo>Grouping__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Grouping__c</fullName>
        <label>Invoice Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Master Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Cumulative_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cumulative Usage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Shows whether the unit price of an order charge can be updated when creating or editing an order record. If the field is checked, the unit price field can be updated.</inlineHelpText>
        <label>Is Price Editable In Order Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Rate_Plan__c</fullName>
        <inlineHelpText>Shows the Rate Plan that has been selected or automatically applied for this charge.</inlineHelpText>
        <label>Order Rate Plan</label>
        <referenceTo>Job_Rate_Plan__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Job_Rate_Plan_Charge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_Order_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate to the master charge when you have multiple accounts who are subscribed to the same usage based service and you wish to roll up the usages from Child Orders to Master Order. All those aggregated units are calculated based on pricing on Master Order</description>
        <inlineHelpText>Relate to the master charge when you have multiple accounts who are subscribed to the same usage based service and you wish to roll up the usages from Child Orders to Master Order. All those aggregated units are calculated based on pricing on Master Order</inlineHelpText>
        <label>Obsolete_Master Order Rate Plan Charge</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Child Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Master_Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Customer_Spend__c</fullName>
        <inlineHelpText>This is the maximum amount your customer will spend for this service. This is the capped amount.</inlineHelpText>
        <label>Max Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mid-Term Adjustment</label>
        <referenceTo>Mid_Term_Adjustment__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mid_Term_Status__c</fullName>
        <label>Mid Term Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Old</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Min_Customer_Spend__c</fullName>
        <inlineHelpText>This is the minimum amount your customer has committed to spend</inlineHelpText>
        <label>Min Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <inlineHelpText>Shows the Net Total for the order charge which is calculated by subtracting the Discount Value from the Sub Total. (Sub Total - Discount Value)</inlineHelpText>
        <label>Net Total</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Charge_Date__c</fullName>
        <description>This holds the Next Charge Date for this rate plan charge. This means this charge is included in the invoice only if the the Invoice Target Date is on or after this date.</description>
        <inlineHelpText>This holds the Next Charge Date for this rate plan charge. This means this charge is included in the invoice only if the the Invoice Target Date is on or after this date.</inlineHelpText>
        <label>Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows the Order record that the charge is related to - click to be taken directly to the Order</inlineHelpText>
        <label>Order</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_of_other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Previous_Charge_Date__c</fullName>
        <description>This holds the Previous Charge Date for this rate plan charge.</description>
        <inlineHelpText>This holds the Previous Charge Date for this rate plan charge.</inlineHelpText>
        <label>Previous Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Previous_Mid_Term_Adjustment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Mid Term Adjustment</label>
        <referenceTo>Mid_Term_Adjustment__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Previous Mid Term Adjustment)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Format__c</fullName>
        <description>This will specify whether price is default type or tiered type.</description>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Flat Fee Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Per Unit Pricing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volume Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <description>This will specify whether price is onetime/recurring.</description>
        <inlineHelpText>The frequency at which the charge will be billed (One Time, Monthly, Quarterly, Annual etc)</inlineHelpText>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Its the Price of selected Quantities</description>
        <inlineHelpText>Shows the Sub Total for the order charge which is calculated by multiplying the unit price by the quantity being ordered. (Quantity * Unit Price)</inlineHelpText>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Bundle_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle Line</label>
        <referenceTo>Product_Bundle_Line__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charge</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <description>Use this field if you would want to configure different VAT percentages for different categories.</description>
        <inlineHelpText>Use this field if you would want to configure different VAT percentages for different categories.</inlineHelpText>
        <label>Tax Category</label>
        <picklist>
            <picklistValues>
                <fullName>Taxable</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Taxable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Shows the name of the order charge.</inlineHelpText>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Job_Rate_Plan_Charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <inlineHelpText>Shows the Total Profit for the Order line (Row Total - Total Unit Cost)</inlineHelpText>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Already_Dispatched__c</fullName>
        <label>Quantity Already Dispatched</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <inlineHelpText>The Quantity of Products/Services being sold</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Dispatch__c</fullName>
        <label>Quantity to Dispatch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recalculate_Revenue_Forecasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate Revenue Forecasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Quantity__c -  Quantity_Already_Dispatched__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewed From</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (Renewed From)</relationshipLabel>
        <relationshipName>Order_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequiredBy</label>
        <referenceTo>Job_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges (RequiredBy)</relationshipLabel>
        <relationshipName>Required_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_End_Date__c</fullName>
        <label>Revenue Recognition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Rule__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>Revenue_Recognition_Rule__c</referenceTo>
        <relationshipLabel>Order Rate Plan Charges</relationshipLabel>
        <relationshipName>Revenue_Recognition_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Recognition_Start_Date__c</fullName>
        <label>Revenue Recognition Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Row_Total__c</fullName>
        <description>Row total of this charge
Subtotal - Discount + VAT + Tax</description>
        <formula>Price__c -  Discount_Value__c +  Tax__c +  VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Row Total of this order charge. (Subtotal - Discount + VAT + Tax)</inlineHelpText>
        <label>Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <description>This holds the Sequence in which the charges are created and appears on the pdf  files</description>
        <inlineHelpText>This holds the Sequence in which the charges are created. Controls the order in which charges appear on Reports / Documents.</inlineHelpText>
        <label>Sequence No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Activation_Date__c</fullName>
        <label>Service Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Shows the status of the order charge. The status field can be used to control whether the order line should be invoiced or provisioned for example.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <inlineHelpText>Shows the Tax code that has been applied to this charge.</inlineHelpText>
        <label>Tax Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage__c</fullName>
        <inlineHelpText>Shows the Tax percentage that has been applied to this charge. Tax percentages are maintained via the Invoice IT setup page.</inlineHelpText>
        <label>Tax Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows the total amount of Tax applied to this order charge.</inlineHelpText>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <inlineHelpText>The Unit of Measure (UOM).</inlineHelpText>
        <label>UOM</label>
        <picklist>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>Unit Selling Price</description>
        <inlineHelpText>The unit selling price of the order line</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift_Frequency__c</fullName>
        <label>Uplift Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Used_Quantity_for_Usage__c</fullName>
        <description>This field holds the used Quantity of Cumulative Usage</description>
        <inlineHelpText>This field holds the used Quantity of Cumulative Usage</inlineHelpText>
        <label>Used Quantity for Usage</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage__c</fullName>
        <inlineHelpText>Shows the VAT percentage that has been applied to this charge. VAT percentages are maintained via the Invoice IT setup page.</inlineHelpText>
        <label>VAT Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Shows the total amount of VAT applied to this order charge.</inlineHelpText>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSOE_Package_Total__c</fullName>
        <label>VSOE Package Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSOE_Pricing__c</fullName>
        <label>VSOE Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VSOE_Total__c</fullName>
        <label>VSOE Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Rate Plan Charge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Usage_Charges</fullName>
        <columns>NAME</columns>
        <columns>Previous_Charge_Date__c</columns>
        <columns>Charge_Date__c</columns>
        <columns>Next_Charge_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Price_Type__c</field>
            <operation>equals</operation>
            <value>Usage</value>
        </filters>
        <label>Usage Charges</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Charge_Service_End_Date_Validation</fullName>
        <active>false</active>
        <description>Charge service end date should not be greater than order service end date</description>
        <errorConditionFormula>(Service_End_Date__c  &gt;  Order__r.Service_End_Date__c) ||     AND(!(ISNULL(Order__r.Service_End_Date__c)),ISNULL(Service_End_Date__c))</errorConditionFormula>
        <errorDisplayField>Service_End_Date__c</errorDisplayField>
        <errorMessage>Charge service end date should not be greater than order service end date</errorMessage>
    </validationRules>
</CustomObject>